--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h2 class="title">About Me</h2>
           <div class="about-content">
             <div class="column left">
-              <img src="D:\Dev.github.io\profile_pic.jpg" alt="Profile Image 626x626">
+              <img src="D:\Dev.github.io\IMG_20230604_132333.jpg" alt="Profile Image 626x626">
         
             </div>
             <div class="column right">
