--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h2 class="title">About Me</h2>
           <div class="about-content">
             <div class="column left">
-              <img src="file:///D:/Dev.github.io/IMG_20230604_132333.jpg" alt="Profile Image 626x626">
+              <img src="D:\Dev.github.io\resize pic.png" alt="Profile Image 626x626">
         
             </div>
             <div class="column right">
@@ -318,6 +318,7 @@
         </span>
       </footer>
 <script src='https://code.jquery.com/jquery-3.5.1.min.js'></script>
+<script src='https://kit.fontawesome.com/3b57a2a2a7.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js'></script>
