--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
           <h2 class="title">About Me</h2>
           <div class="about-content">
             <div class="column left">
-              <img src="D:\Dev.github.io\resize pic.png" alt="Profile Image 626x626">
+              <!--<img src="https://ibb.co/gTLSgNn" alt="Profile Image 626x626"-->
+              <img src="https://i.ibb.co/wWFS6Vv/IMG-20230604-132333.jpg" alt="IMG-20230604-132333">
         
             </div>
             <div class="column right">
